test/negative/var_as_input_and_output.net
INPUT a
OUTPUT a
VAR a
IN
a = 0
